examples/kju/positive/functions/function_overload_and_use.kju
fun f(x:Bool):Bool{
	return x;
}

fun f(x:Int):Int{
	return x;
}

fun kju():Unit{
    var x:Bool = f(true);
    var y:Int = f(5);
}