examples/kju/negative/semicolons/semicolon_missed.kju
fun kju():Unit{
	var x:Int=5
	var y:Int=5;
}